<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <CheckBoxPreference
        android:defaultValue="false"
        android:title="@string/try_pro_lite_mode"
        android:key="try_pro_mode"
        android:summary="@string/try_pro_lite_mode_summary"
        android:enabled="false" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/use_tts"
        android:entryValues="@array/use_tts_values"
        android:key="select_tts"
        android:title="@string/use_tts_title" />
    <ListPreference
        android:defaultValue="en_US"
        android:entries="@array/use_locale"
        android:entryValues="@array/use_locale_values"
        android:key="select_locale"
        android:title="@string/locale_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:title="@string/only_untreated_contacts"
        android:key="only_changed_contacts"
        android:summary="@string/only_untreated_contacts_summary" />

    <RingtonePreference
        android:defaultValue=""
        android:title="@string/call_ringtone"
        android:key="ringtone_for_calling" />
    <EditTextPreference
        android:defaultValue="3"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/timeout_before_speech"
        android:key="timeout_before_speech"
        android:numeric="integer" />
    <EditTextPreference
        android:defaultValue="25"
        android:selectAllOnFocus="true"
        android:title="@string/ringtone_duration"
        android:key="ringtone_duration"
        android:singleLine="true"
        android:numeric="integer" />
    <EditTextPreference
        android:defaultValue="@string/prefix_for_incoming_call_value"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/prefix_for_incoming_call"
        android:key="prefix_for_incoming_call" />
    <EditTextPreference
        android:defaultValue="@string/suffix_for_incoming_call_value"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/suffix_for_incoming_call"
        android:key="suffix_for_incoming_call" />
    <ListPreference
        android:defaultValue="8000"
        android:entries="@array/use_freq"
        android:entryValues="@array/use_freq_values"
        android:key="select_freq"
        android:title="@string/use_freq_title" />
    <!--

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
-->

</PreferenceScreen>
