<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bacompany.wc.MainActivity"
    android:padding="0dp"
    android:layout_margin="0dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/LogView"
        android:scrollbars="vertical"
        android:inputType="textMultiLine|textNoSuggestions"
        android:gravity="bottom"
        android:layout_above="@+id/fadlayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="sans-serif-condensed"
        android:padding="4px" />


    <FrameLayout
        android:id="@+id/fadlayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/layout"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/must_be_advertising"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView2"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:onClick="OnAdlayerClick" />

        <com.google.android.gms.ads.AdView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/adView"
            tools:layout_height="100dp"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_centerHorizontal="true"
            android:layout_margin="0dp"
            android:padding="0dp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <Button
        android:text="@string/prestart_creating_ringtones"
        android:onClick="OnStartClick"
        android:layout_height="wrap_content"
        android:id="@+id/start_conversion"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="sans-serif-condensed"
        android:enabled="false"
        android:visibility="gone"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_weight="4" />

        <Button
            android:text="@string/remove_contacts_ringtones"
            android:layout_height="wrap_content"
            android:id="@+id/remove_contacts_ringtones"
            android:textAllCaps="false"
            android:layout_weight="2"
            android:textSize="14sp"
            android:fontFamily="sans-serif-condensed"
            android:onClick="OnRemoveClick"
            android:enabled="true"
            android:visibility="gone"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content" />

        <Button
        android:text="@string/ringtone_sample"
        android:onClick="OnSampleClick"
        android:layout_height="wrap_content"
        android:id="@+id/start_sample"
        android:layout_weight="3"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="sans-serif-condensed"
        android:enabled="true"
        android:visibility="gone"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content" />
    <Button
        android:text="@string/stop_creating"
        android:onClick="OnStopClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stop"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="sans-serif-condensed"
        android:visibility="gone"
        android:enabled="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    </LinearLayout>


</RelativeLayout>
